--- a/package.json
+++ b/package.json
@@ -4,23 +4,41 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "concurrently \"node server\" \"webpack --watch\"",
+    "dev": "concurrently 'yarn client' 'yarn server'",
+    "client": "webpack --watch",
+    "server": "nodemon server --ignore server/public",
     "build": "webpack --mode production"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "css-loader": "^3.0.0",
+    "nodemon": "^1.19.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4"
   },
   "dependencies": {
+    "apollo-server-express": "^2.6.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "graphql": "^14.3.1",
+    "graphql-server-express": "^1.4.0",
+    "graphql-tools": "^4.0.4",
     "html-webpack-plugin": "^3.2.0",
+    "mongodb": "^3.2.7",
     "path": "^0.12.7",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "webpack-dev-server": "^3.7.2"
