--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "concurrently \"node server\" \"webpack --watch\"",
     "dev": "concurrently 'yarn client' 'yarn server'",
     "client": "webpack --watch",
-    "server": "nodemon server --ignore server/public",
+    "server": "nodemon --exec babel-node server/index ",
     "build": "webpack --mode production"
   },
   "devDependencies": {
@@ -20,12 +20,15 @@
     "babel-plugin-syntax-async-functions": "^6.13.0",
     "css-loader": "^3.0.0",
     "nodemon": "^1.19.1",
+    "nodemon-webpack-plugin": "^4.0.8",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-plugin-graphql-schema-hot": "^0.0.10"
   },
   "dependencies": {
+    "apollo-server": "^2.6.4",
     "apollo-server-express": "^2.6.3",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
@@ -34,9 +37,11 @@
     "express": "^4.17.1",
     "graphql": "^14.3.1",
     "graphql-server-express": "^1.4.0",
+    "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.4",
     "html-webpack-plugin": "^3.2.0",
     "mongodb": "^3.2.7",
+    "mongoose": "^5.6.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
