--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
@@ -22,9 +23,13 @@
     "nodemon": "^1.19.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "sass-loader": "^7.1.0",
+    "serverless": "^1.45.1",
+    "serverless-offline": "^5.4.2",
+    "serverless-webpack": "^5.3.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.34.0",
+    "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
+    "webpack-node-externals": "^1.7.2",
     "webpack-plugin-graphql-schema-hot": "^0.0.10"
   },
   "dependencies": {
